--- a/app/views/servicegroups/_partials/list.html
+++ b/app/views/servicegroups/_partials/list.html
@@ -29,16 +29,16 @@
             ng-click="select(servicegroup)"
             class="list-item list-item-padded"
             ng-repeat="servicegroup in servicegroups"
-            title="{{servicegroup.description}}"
+            title="{{ servicegroup.description.en }}"
           >
             <div class="list-left">
               <span class="w-40 avatar circle">
                 <letter-avatar
                   title="Service Group Code"
-                  data="{{servicegroup.code}}"
+                  data="{{ servicegroup.code }}"
                   height="60"
                   width="60"
-                  color="{{servicegroup.color}}"
+                  color="{{ servicegroup.color }}"
                   shape="round"
                 >
                 </letter-avatar>
@@ -49,13 +49,13 @@
                 title="Service Group Code"
                 class="pull-right text-xs text-muted"
               >
-                {{servicegroup.code}}
+                {{ servicegroup.code }}
               </span>
               <div title="Service Group Name" class="item-title">
-                <span class="_500">{{servicegroup.name}}</span>
+                <span class="_500">{{ servicegroup.name.en }}</span>
               </div>
               <p class="block text-muted text-ellipsis">
-                {{servicegroup.description}}
+                {{ servicegroup.description.en }}
               </p>
             </div>
           </div>
@@ -76,7 +76,7 @@
       ng-change="find()"
       template-url="views/_partials/list_pager.html"
     ></div>
-    <span class="text-sm text-muted">Total: {{total}}</span>
+    <span class="text-sm text-muted">Total: {{ total }}</span>
   </div>
   <!-- end pagination -->
 </div>
