--- a/app/views/services/_partials/list.html
+++ b/app/views/services/_partials/list.html
@@ -29,16 +29,16 @@
             ng-click="select(service)"
             class="list-item list-item-padded"
             ng-repeat="service in services"
-            title="{{service.description}}"
+            title="{{ service.description.en }}"
           >
             <div class="list-left">
               <span class="w-40 avatar circle">
                 <letter-avatar
                   title="Service Code"
-                  data="{{service.code}}"
+                  data="{{ service.code }}"
                   height="60"
                   width="60"
-                  color="{{service.color}}"
+                  color="{{ service.color }}"
                   shape="round"
                 >
                 </letter-avatar>
@@ -46,16 +46,18 @@
             </div>
             <div class="list-body">
               <span title="Service Code" class="pull-right text-xs text-muted">
-                {{service.code}}
+                {{ service.code }}
               </span>
               <div class="item-title">
-                <span title="Service Name" class="_500">{{service.name}}</span>
+                <span title="Service Name" class="_500"
+                  >{{ service.name.en }}</span
+                >
               </div>
               <p
                 title="Service Description"
                 class="block text-muted text-ellipsis"
               >
-                {{service.description}}
+                {{ service.description.en }}
               </p>
             </div>
           </div>
@@ -76,7 +78,7 @@
       ng-change="find()"
       template-url="views/_partials/list_pager.html"
     ></div>
-    <span class="text-sm text-muted">Total: {{total}}</span>
+    <span class="text-sm text-muted">Total: {{ total }}</span>
   </div>
   <!-- end pagination -->
 </div>
