refactor: use location to show map

--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -238,7 +238,7 @@
         <div
           print-hide
           class="padding b-t"
-          ng-show="servicerequest.longitude && servicerequest.latitude"
+          ng-show="servicerequest.location && servicerequest.location.coordinates"
         >
           <h6 class="m-b" title="Issue Map">Map</h6>
           <leaflet
