--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -47,6 +47,10 @@
             Used {{comment.quantity}} - {{comment.item.properties.unit}} of
             {{comment.item.name}}
           </p>
+          <p ng-if="comment.location && comment.location.coordinates">
+            Change location to longitude: {{comment.location.coordinates[0]}},
+            latitude: {{comment.location.coordinates[1]}}
+          </p>
           <p ng-if="comment.status && comment.status.name">
             Change status to
             <span
