--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -106,7 +106,7 @@
                 </li> -->
 
         <!-- operation navigation menu -->
-        <li ui-sref-active="active">
+        <li ui-sref-active="active" style="display: none">
           <a ui-sref="app.operations" title="Operations Reports">
             <span class="nav-icon">
               <i class="ion-ios-people"></i>
