--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -123,10 +123,10 @@
                 >
                   <span
                     class="pull-right text-sm label danger rounded"
-                    style="background-color: {{status.color}}"
+                    style="background-color: {{ status.color }}"
                   >
-                    {{summaries.statuses[status._id]}} </span
-                  >{{status.name}}</a
+                    {{ summaries.statuses[status._id] }} </span
+                  >{{ status.name }}</a
                 >
               </li>
             </ul>
@@ -149,10 +149,10 @@
                 >
                   <span
                     class="pull-right text-sm label danger rounded"
-                    style="background-color: {{priority.color}}"
+                    style="background-color: {{ priority.color }}"
                   >
-                    {{summaries.priorities[priority._id]}} </span
-                  >{{priority.name}}</a
+                    {{ summaries.priorities[priority._id] }} </span
+                  >{{ priority.name }}</a
                 >
               </li>
             </ul>
@@ -160,7 +160,7 @@
         </div>
         <!-- end priorities menu -->
         <!-- start reportedAt date -->
-        <div class="p-a-md">
+        <div class="p-a-md" style="display: none">
           <div class="m-b text-muted text-xs">
             <a ng-click="showReportedAtFilter()"
               >Reported Date
@@ -187,7 +187,7 @@
         <!-- end reportedAt date -->
 
         <!-- start resolvedAt date inputs -->
-        <div class="p-a-md">
+        <div class="p-a-md" style="display: none">
           <div class="m-b text-muted text-xs">
             <a ng-click="showResolvedAtFilter()"
               >Resolved Date
@@ -214,7 +214,7 @@
         <!-- end resolvedAt date inputs -->
 
         <!-- start Workers inputs -->
-        <div class="p-a-md">
+        <div class="p-a-md" style="display: none">
           <div class="m-b text-muted text-xs">
             <span ng-click=""
               >Workers
@@ -261,11 +261,11 @@
                 >
                   <span
                     class="pull-right text-sm label danger rounded"
-                    style="background-color: {{service.color}}"
+                    style="background-color: {{ service.color }}"
                   >
-                    {{summaries.services[service._id]}}
+                    {{ summaries.services[service._id] }}
                   </span>
-                  {{service.name}}
+                  {{ service.name }}
                 </a>
               </li>
             </ul>
@@ -288,10 +288,10 @@
                 >
                   <span
                     class="pull-right text-sm label danger rounded"
-                    style="background-color: {{jurisdiction.color}}"
+                    style="background-color: {{ jurisdiction.color }}"
                   >
-                    {{summaries.jurisdictions[jurisdiction._id]}} </span
-                  >{{jurisdiction.name}}</a
+                    {{ summaries.jurisdictions[jurisdiction._id] }} </span
+                  >{{ jurisdiction.name }}</a
                 >
               </li>
             </ul>
