--- a/app/views/zones/_partials/detail.html
+++ b/app/views/zones/_partials/detail.html
@@ -43,7 +43,7 @@
                     <input
                       title="Zone Name"
                       ng-disabled="!edit"
-                      ng-model="zone.name"
+                      ng-model="zone.name.en"
                       ng-required
                       ng-minlength="2"
                       type="text"
@@ -78,7 +78,7 @@
                     <textarea
                       title="Zone Description"
                       ng-disabled="!edit"
-                      ng-model="zone.description"
+                      ng-model="zone.description.en"
                       msd-elastic
                       name="description"
                       class="form-control"
