--- a/app/views/items/_partials/detail.html
+++ b/app/views/items/_partials/detail.html
@@ -43,7 +43,7 @@
                     <input
                       title="Item Name"
                       ng-disabled="!edit"
-                      ng-model="item.name"
+                      ng-model="item.name.en"
                       ng-required
                       ng-minlength="2"
                       type="text"
@@ -93,7 +93,7 @@
                     <textarea
                       title="Item Description"
                       ng-disabled="!edit"
-                      ng-model="item.description"
+                      ng-model="item.description.en"
                       msd-elastic
                       name="description"
                       class="form-control"
