--- a/app/views/servicerequests/_partials/worklog.html
+++ b/app/views/servicerequests/_partials/worklog.html
@@ -17,8 +17,8 @@
     </thead>
     <tbody>
       <tr ng-repeat="worklog in worklogs">
-        <td title="{{worklog.item.name}}">
-          {{worklog.item.name}}
+        <td title="{{worklog.item.name.en}}">
+          {{worklog.item.name.en}}
         </td>
         <td title="{{worklog.quantity}}">
           {{worklog.quantity}}
