--- a/app/views/jurisdictions/_partials/detail.html
+++ b/app/views/jurisdictions/_partials/detail.html
@@ -169,22 +169,16 @@
                   </div>
                 </div>
                 <div class="m-t-lg" title="Jurisdiction Color">
-                  <color-picker ng-model="jurisdiction.color"> </color-picker>
                   <div class="m-t-lg">
                     <div class="form-group">
                       <label title="Jurisdiction Color" class="floating-label"
                         >Jurisdiction Color(HEX)</label
                       >
-                      <input
-                        title="Jurisdiction Color"
-                        ng-disabled="!edit"
+                      <color-picker
                         ng-model="jurisdiction.color"
-                        ng-required
-                        ng-minlength="1"
-                        type="text"
-                        name="color"
-                        class="form-control"
-                      />
+                        options="colorPickerOptions"
+                      >
+                      </color-picker>
                     </div>
                   </div>
                 </div>
