--- a/app/views/zones/_partials/detail.html
+++ b/app/views/zones/_partials/detail.html
@@ -53,22 +53,16 @@
                   </div>
                 </div>
                 <div class="m-t-lg" title="Zone Color">
-                  <color-picker ng-model="zone.color"> </color-picker>
                   <div class="m-t-lg">
                     <div class="form-group">
                       <label title="Zone Color" class="floating-label"
                         >Zone Color(HEX)</label
                       >
-                      <input
-                        title="Zone Color"
-                        ng-disabled="!edit"
+                      <color-picker
                         ng-model="zone.color"
-                        ng-required
-                        ng-minlength="1"
-                        type="text"
-                        name="color"
-                        class="form-control"
-                      />
+                        options="colorPickerOptions"
+                      >
+                      </color-picker>
                     </div>
                   </div>
                 </div>
