--- a/app/views/items/_partials/detail.html
+++ b/app/views/items/_partials/detail.html
@@ -68,22 +68,16 @@
                   </div>
                 </div>
                 <div class="m-t-lg" title="Item Color">
-                  <color-picker ng-model="item.color"> </color-picker>
                   <div class="m-t-lg">
                     <div class="form-group">
                       <label title="Item Color" class="floating-label"
                         >Item Color(HEX)</label
                       >
-                      <input
-                        title="Item Color"
-                        ng-disabled="!edit"
+                      <color-picker
                         ng-model="item.color"
-                        ng-required
-                        ng-minlength="1"
-                        type="text"
-                        name="color"
-                        class="form-control"
-                      />
+                        options="colorPickerOptions"
+                      >
+                      </color-picker>
                     </div>
                   </div>
                 </div>
