--- a/app/views/priorities/_partials/detail.html
+++ b/app/views/priorities/_partials/detail.html
@@ -73,22 +73,16 @@
                   </div>
                 </div>
                 <div class="m-t-lg" title="Priority Color">
-                  <color-picker ng-model="priority.color"> </color-picker>
                   <div class="m-t-lg">
                     <div class="form-group">
                       <label title="Priority Color" class="floating-label"
                         >Priority Color(HEX)</label
                       >
-                      <input
-                        title="Priority Color"
-                        ng-disabled="!edit"
+                      <color-picker
                         ng-model="priority.color"
-                        ng-required
-                        ng-minlength="1"
-                        type="text"
-                        name="color"
-                        class="form-control"
-                      />
+                        options="colorPickerOptions"
+                      >
+                      </color-picker>
                     </div>
                   </div>
                 </div>
