--- a/app/views/statuses/_partials/detail.html
+++ b/app/views/statuses/_partials/detail.html
@@ -73,22 +73,16 @@
                   </div>
                 </div>
                 <div class="m-t-lg" title="Status Color">
-                  <color-picker ng-model="status.color"> </color-picker>
                   <div class="m-t-lg">
                     <div class="form-group">
                       <label title="Status Color" class="floating-label"
                         >Status Color(HEX)</label
                       >
-                      <input
-                        title="Status Color"
-                        ng-disabled="!edit"
+                      <color-picker
                         ng-model="status.color"
-                        ng-required
-                        ng-minlength="1"
-                        type="text"
-                        name="color"
-                        class="form-control"
-                      />
+                        options="colorPickerOptions"
+                      >
+                      </color-picker>
                     </div>
                   </div>
                 </div>
