--- a/app/views/parties/_partials/detail.html
+++ b/app/views/parties/_partials/detail.html
@@ -51,7 +51,7 @@
                     <label title="Zone" class="floating-label">Zone</label>
                     <input
                       ng-disabled="!edit"
-                      ng-model="party.zone.name"
+                      ng-model="party.zone.name.en"
                       ng-required
                       ng-minlength="2"
                       type="text"
@@ -61,7 +61,7 @@
                   </div>
                   <div ng-show="edit" class="form-group form-material floating">
                     <oi-select
-                      oi-options="item.name for item in zones track by item._id"
+                      oi-options="item.name.en for item in zones track by item._id"
                       ng-model="party.zone"
                       placeholder="Select Zone"
                       class="form-control"
@@ -222,7 +222,7 @@
                             ng-model="party.relation.workspace"
                             ng-value="workspace"
                           />
-                          <label>{{workspace}}</label>
+                          <label>{{ workspace }}</label>
                         </div>
                       </div>
                     </div>
@@ -256,7 +256,7 @@
                             checklist-model="party._assigned"
                             checklist-value="role._id"
                           />
-                          <label>{{role.name}}</label>
+                          <label>{{ role.name }}</label>
                         </div>
                       </div>
                     </div>
