--- a/app/views/dashboards/operation/index.html
+++ b/app/views/dashboards/operation/index.html
@@ -3,7 +3,7 @@
   <div class="navbar">
     <!-- start report title -->
     <div class="navbar-item pull-left h5 text-md">
-      Operations
+      Operations - Reports
     </div>
     <!-- end report title -->
     <!-- start report actions -->
