--- a/app/views/dashboards/operation/_partials/overall_summary.html
+++ b/app/views/dashboards/operation/_partials/overall_summary.html
@@ -61,7 +61,7 @@
       <!-- start jurisdiction performance summary -->
       <div class="row no-gutter">
         <!-- start total -->
-        <div class="col-xs-6 col-sm-3 b-r b-b" title="Total Service Requests">
+        <div class="col-xs-6 col-sm-1 b-r b-b" title="Total Service Requests">
           <div class="p-a-sm">
             <div class="text-center">
               <h4 class="text-center _600 m-t-md">
@@ -73,7 +73,7 @@
         </div>
         <!-- end total -->
 
-        <!-- start pending -->
+        <!-- start assinged -->
         <div class="col-xs-6 col-sm-2 b-r b-b" title="Pending Service Requests">
           <div class="p-a-sm">
             <div>
@@ -87,13 +87,33 @@
               <h4 class="text-center _600 m-t-md">
                 {{performances.overall.pending | number:0}}
               </h4>
-              <p class="text-muted m-b-md">Pending</p>
+              <p class="text-muted m-b-md">Assinged</p>
             </div>
           </div>
         </div>
-        <!-- end pending -->
+        <!-- end assinged -->
 
-        <!-- start resolved -->
+        <!-- start attending -->
+        <div class="col-xs-6 col-sm-2 b-r b-b" title="Pending Service Requests">
+          <div class="p-a-sm">
+            <div>
+              <span
+                class="pull-right text-xs"
+                ng-class="performances.overall.percentagePending <= 50 ? 'text-success' : 'text-danger'"
+                >{{performances.overall.percentagePending | number:2}}%</span
+              >
+            </div>
+            <div class="text-center">
+              <h4 class="text-center _600 m-t-md">
+                {{performances.overall.pending | number:0}}
+              </h4>
+              <p class="text-muted m-b-md">Attending</p>
+            </div>
+          </div>
+        </div>
+        <!-- end attending -->
+
+        <!-- start blocked -->
         <div
           class="col-xs-6 col-sm-2 b-r b-b"
           title="Resolved Service Requests"
@@ -110,13 +130,13 @@
               <h4 class="text-center _600 m-t-md">
                 {{performances.overall.resolved | number:0}}
               </h4>
-              <p class="text-muted m-b-md">Resolved</p>
+              <p class="text-muted m-b-md">Blocked</p>
             </div>
           </div>
         </div>
-        <!-- end resolved -->
+        <!-- end blocked -->
 
-        <!-- start late -->
+        <!-- start completed -->
         <div
           class="col-xs-6 col-sm-2 b-r b-b"
           title="Late(Past SLA Time) Service Requests"
@@ -133,15 +153,15 @@
               <h4 class="text-center _600 m-t-md">
                 {{performances.overall.late | number:0}}
               </h4>
-              <p class="text-muted m-b-md">Late</p>
+              <p class="text-muted m-b-md">Completed</p>
             </div>
           </div>
         </div>
-        <!-- end late  -->
+        <!-- end completed  -->
 
-        <!-- start escallated -->
+        <!-- start verified -->
         <div
-          class="col-xs-6 col-sm-3 b-b"
+          class="col-xs-6 col-sm-2 b-b"
           title="Late(Past SLA Time) Service Requests"
         >
           <div class="p-a-sm">
@@ -149,11 +169,27 @@
               <h4 class="text-center _600 m-t-md">
                 {{performances.overall.late | number:0}}
               </h4>
-              <p class="text-muted m-b-md">Escallated</p>
+              <p class="text-muted m-b-md">Verified</p>
             </div>
           </div>
         </div>
-        <!-- end escallated  -->
+        <!-- end verified  -->
+
+        <!-- start approved -->
+        <div
+          class="col-xs-6 col-sm-1 b-b b-l"
+          title="Late(Past SLA Time) Service Requests"
+        >
+          <div class="p-a-sm">
+            <div class="text-center">
+              <h4 class="text-center _600 m-t-md">
+                {{performances.overall.late | number:0}}
+              </h4>
+              <p class="text-muted m-b-md">Approved</p>
+            </div>
+          </div>
+        </div>
+        <!-- end approved  -->
       </div>
       <!-- end jurisdiction performance summary -->
 
