--- a/app/views/dashboards/operation/_partials/services_summary.html
+++ b/app/views/dashboards/operation/_partials/services_summary.html
@@ -56,110 +56,122 @@
 
     <!-- start body -->
     <div>
-      <div class="row-col">
-        <!-- start visual stats -->
-        <div class="col-sm-6 b-r lt">
-          <div class="p-a-md">
-            <echart
-              config="perServiceConfig"
-              options="perServiceOptions"
-            ></echart>
-          </div>
-        </div>
-        <!-- end visual starts -->
+      <table class="table table-bordered table-stats">
+        <thead>
+          <tr>
+            <th ng-click="prepareServiceVisualization('count')" title="Area">
+              Service
+            </th>
+            <th
+              ng-click="prepareServiceVisualization('count')"
+              title="Total Count of Service Requests"
+            >
+              Total
+            </th>
+            <th
+              ng-click="prepareServiceVisualization('pending')"
+              title="Total Count of Pending Service Requests"
+            >
+              Assigned
+            </th>
+            <th
+              ng-click="prepareServiceVisualization('resolved')"
+              title="Total Count of Resolved Service Requests"
+            >
+              Attending
+            </th>
+            <th
+              ng-click="prepareServiceVisualization('late')"
+              title="Total Count of Service Requests Past SLA Resolve Time"
+            >
+              Blocked
+            </th>
+            <th
+              title="Average Time Taken to Attend a Customer(Call) Service Request"
+            >
+              Completed
+            </th>
+            <th title="Average Time Taken to a Resolve Service Request">
+              Verified
+            </th>
+            <th title="Average Time Taken to a Resolve Service Request">
+              Approved
+            </th>
+            <th title="Average Time Taken to a Resolve Service Request">
+              Average Block Time
+            </th>
+            <th title="Average Time Taken to a Resolve Service Request">
+              Average Work Time
+            </th>
+            <th title="Average Time Taken to a Resolve Service Request">
+              Average Resolution Time
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="service in performances.services">
+            <td title="{{service.name}}">
+              {{service.name}}
+            </td>
+            <td title="{{service.count | number:0}}">
+              {{service.count | number:0}}
+            </td>
+            <td title=" {{service.pending | number:0}}">
+              {{service.pending | number:0}}
+            </td>
+            <td title=" {{service.resolved | number:0}}">
+              {{service.resolved | number:0}}
+            </td>
+            <td title=" {{service.late | number:0}}">
+              {{service.late | number:0}}
+            </td>
+            <td title=" {{service.late | number:0}}">
+              {{service.late | number:0}}
+            </td>
+            <td title=" {{service.late | number:0}}">
+              {{service.late | number:0}}
+            </td>
+            <td title=" {{service.late | number:0}}">
+              {{service.late | number:0}}
+            </td>
+            <td>
+              <span>
+                {{service.averageAttendTime.minutes}}
+                <span class="text-muted text-xs">mins</span>
+              </span>
+              <span>
+                {{service.averageAttendTime.seconds}}
+                <span class="text-muted text-xs">secs</span>
+              </span>
+            </td>
 
-        <!-- start tabular stats -->
-        <div class="col-sm-6">
-          <table class="table table-bordered table-stats">
-            <thead>
-              <tr>
-                <th
-                  ng-click="prepareServiceVisualization('count')"
-                  title="Area"
-                >
-                  Service
-                </th>
-                <th
-                  ng-click="prepareServiceVisualization('count')"
-                  title="Total Count of Service Requests"
-                >
-                  Total
-                </th>
-                <th
-                  ng-click="prepareServiceVisualization('pending')"
-                  title="Total Count of Pending Service Requests"
-                >
-                  Pending
-                </th>
-                <th
-                  ng-click="prepareServiceVisualization('resolved')"
-                  title="Total Count of Resolved Service Requests"
-                >
-                  Resolved
-                </th>
-                <th
-                  ng-click="prepareServiceVisualization('late')"
-                  title="Total Count of Service Requests Past SLA Resolve Time"
-                >
-                  Late
-                </th>
-                <th
-                  title="Average Time Taken to Attend a Customer(Call) Service Request"
-                >
-                  Average Attend Time
-                </th>
-                <th title="Average Time Taken to a Resolve Service Request">
-                  Average Resolve Time
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="service in performances.services">
-                <td title="{{service.name}}">
-                  {{service.name}}
-                </td>
-                <td title="{{service.count | number:0}}">
-                  {{service.count | number:0}}
-                </td>
-                <td title=" {{service.pending | number:0}}">
-                  {{service.pending | number:0}}
-                </td>
-                <td title=" {{service.resolved | number:0}}">
-                  {{service.resolved | number:0}}
-                </td>
-                <td title=" {{service.late | number:0}}">
-                  {{service.late | number:0}}
-                </td>
-                <td>
-                  <span>
-                    {{service.averageAttendTime.minutes}}
-                    <span class="text-muted text-xs">mins</span>
-                  </span>
-                  <span>
-                    {{service.averageAttendTime.seconds}}
-                    <span class="text-muted text-xs">secs</span>
-                  </span>
-                </td>
-                <td>
-                  <span>
-                    {{performances.overall.averageResolveTime.hours +
-                    (performances.overall.averageResolveTime.days * 24)}}
-                    <span class="text-muted text-xs">hrs</span>
-                  </span>
-                  <span>
-                    {{service.averageAttendTime.minutes}}
-                    <span class="text-muted text-xs">mins</span>
-                  </span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <!-- end tabular stats -->
-      </div>
+            <td>
+              <span>
+                {{service.averageAttendTime.minutes}}
+                <span class="text-muted text-xs">mins</span>
+              </span>
+              <span>
+                {{service.averageAttendTime.seconds}}
+                <span class="text-muted text-xs">secs</span>
+              </span>
+            </td>
+            <td>
+              <span>
+                {{performances.overall.averageResolveTime.hours +
+                (performances.overall.averageResolveTime.days * 24)}}
+                <span class="text-muted text-xs">hrs</span>
+              </span>
+              <span>
+                {{service.averageAttendTime.minutes}}
+                <span class="text-muted text-xs">mins</span>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- end tabular stats -->
     </div>
-    <!-- end body -->
   </div>
-  <!-- end report box -->
+  <!-- end body -->
 </div>
 <!-- end services summary -->
