refactor: rename un-attended to un-confirmed
close #41

--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -50,7 +50,7 @@
                   class="nav-link text-muted block"
                   title="Reported Issues Using Other Method Than Call Center"
                 >
-                  Un-Attended
+                  Un-Confirmed
                 </a>
               </li>
               <li
