--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -88,7 +88,7 @@
                   class="nav-link text-muted block"
                   title="Reported Issues Currently Not Resolved"
                 >
-                  Un-Resolved
+                  Pending
                 </a>
               </li>
               <li
